--- a/index.html
+++ b/index.html
@@ -49,15 +49,16 @@
         <div class="content">
             <h3>Vansh Srivastav</h3>
             <p>i am front-end developer</p>
-            <a href="#" class="btn">download cv</a>
+            <a href="resume.pdf" download="VanshResume" class="btn">download cv</a>
         </div>
 
         <div class="share">
-            <a href="#" class="fab fa-facebook"></a>
-            <a href="" class="fab fa-instagram"></a>
-            <a href="" class="fab fa-github"></a>
-            <a href="" class="fab fa-linkedin"></a>
-            <a href="" class="fab fa-youtube"></a>
+            <a href="https://www.linkedin.com/in/vansh-srivastav-24550828b/" class="fab fa-linkedin"></a>
+            <a href="https://github.com/VanshSrivastav21-VS" class="fab fa-github"></a>
+            <a href="https://www.facebook.com/profile.php?id=61559987835634&mibextid=ZbWKwL"
+                class="fab fa-facebook"></a>
+            <a href="https://www.instagram.com/vansh._.4uu?igsh=MXB6NzloN3hqaDF4cA==" class="fab fa-instagram"></a>
+            <a href="https://youtube.com/@codecraftbyvansh?si=WsmWCXd1pL7WS9LD" class="fab fa-youtube"></a>
         </div>
     </section>
     <!-- Home Section End -->
@@ -90,15 +91,15 @@
 
             <div class="content">
                 <h3>my name is <span> vansh srivastav </span></h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi autem ab iste. Dolore placeat enim
-                    molestiae ducimus facere. Optio voluptatem sit molestiae provident! Alias, excepturi.</p>
-                <a href="#" class="btn">contact me</a>
+                <p>"Passionate web developer with expertise in HTML, CSS, JavaScript, and Django. Skilled in building
+                    responsive, user-friendly websites with modern design and seamless functionality."</p>
+                <a href="#contact" class="btn">contact me</a>
             </div>
         </div>
 
         <div class="row">
             <div class="progress">
-                <h3>web design <span>90%</span> </h3>
+                <h3>web design <span>80%</span> </h3>
                 <div class="bar bar-1-1"><span></span></div>
                 <h3>graphic design <span>70%</span> </h3>
                 <div class="bar bar-1-2"><span></span></div>
@@ -107,11 +108,11 @@
             </div>
 
             <div class="progress">
-                <h3>HTML <span>90%</span> </h3>
+                <h3>HTML <span>95%</span> </h3>
                 <div class="bar bar-2-1"><span></span></div>
-                <h3>CSS <span>70%</span> </h3>
+                <h3>CSS <span>80%</span> </h3>
                 <div class="bar bar-2-2"><span></span></div>
-                <h3>JavaScript <span>65%</span> </h3>
+                <h3>JavaScript <span>40%</span> </h3>
                 <div class="bar bar-2-3"><span></span></div>
             </div>
         </div>
@@ -127,22 +128,23 @@
             <div class="box">
                 <i class="fas fa-code"></i>
                 <h3>web design</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, officiis repudiandae saepe quisquam
-                    necessitatibus excepturi.</p>
+                <p>"Creative and responsive web design focused on user experience and modern aesthetics. Expert in HTML,
+                    CSS, JavaScript, and frameworks like Django, crafting dynamic, intuitive websites."</p>
             </div>
 
             <div class="box">
                 <i class="fas fa-paint-brush"></i>
                 <h3>graphic design</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, officiis repudiandae saepe quisquam
-                    necessitatibus excepturi.</p>
+                <p>"Creative and visually captivating designs crafted with precision and innovation. Specializing in
+                    branding, web graphics, and user-centric visuals to enhance your brand's identity and presence."
+                </p>
             </div>
 
             <div class="box">
                 <i class="fas fa-mobile"></i>
                 <h3>responsive design</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, officiis repudiandae saepe quisquam
-                    necessitatibus excepturi.</p>
+                <p>"Designed responsive websites that provide seamless user experiences across devices, ensuring optimal
+                    performance and accessibility on mobile, tablet, and desktop platforms using modern frameworks."</p>
             </div>
 
 
@@ -151,7 +153,7 @@
     <!-- Service Section End -->
 
     <!-- Portfolio Section Start -->
-     <section class="portfolio" id="portfolio">
+    <section class="portfolio" id="portfolio">
 
         <h1 class="heading"> my <span>portfolio</span></h1>
 
@@ -160,10 +162,10 @@
             <div class="box">
                 <img src="images/project1.jpeg" alt="">
                 <div class="content">
-                    <h3>Ecommerce Website</h3>
+                    <h3>Ecommerce Website (FlipMart)</h3>
                     <div style="display: flex;">
-                        <a href="#" class="button">Github</a>
-                        <a href="#" class="button">Live Demo</a>
+                        <a href="https://github.com/VanshSrivastav21-VS/FlipMart" class="button">Github</a>
+                        <a href="https://youtu.be/QHsqkZ2fDvY?si=J4AkF-XUnZ2ordYF" class="button">Live Demo</a>
                     </div>
                 </div>
             </div>
@@ -173,61 +175,39 @@
                 <div class="content">
                     <h3>Travel Website</h3>
                     <div style="display: flex;">
-                        <a href="#" class="button">Github</a>
-                        <a href="#" class="button">Live Demo</a>
+                        <a href="https://github.com/VanshSrivastav21-VS/Travelia" class="button">Github</a>
+                        <a href="https://youtu.be/UsINfMXJz1Q?si=yjhrDXRTxpiQGJ0w" class="button">Live Demo</a>
                     </div>
                 </div>
             </div>
 
             <div class="box">
-                <img src="images/project3.jpeg" alt="">
+                <img src="images/project4.jpg" alt="">
                 <div class="content">
-                    <h3>Online Resume Builder</h3>
+                    <h3>facebook clone</h3>
                     <div style="display: flex;">
-                        <a href="#" class="button">Github</a>
-                        <a href="#" class="button">Live Demo</a>
+                        <a href="https://github.com/VanshSrivastav21-VS/facebokk_clone" class="button">Github</a>
+                        <a href="https://youtu.be/foivombaqRQ?si=CcFaVTX3XJrBAIbq" class="button">Live Demo</a>
                     </div>
                 </div>
             </div>
 
             <div class="box">
-                <img src="" alt="">
+                <img src="images/project5.jpg" alt="">
                 <div class="content">
-                    <h3>project 04</h3>
+                    <h3>Book Rental</h3>
                     <div style="display: flex;">
-                        <a href="#" class="button">Github</a>
-                        <a href="#" class="button">Live Demo</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="box">
-                <img src="" alt="">
-                <div class="content">
-                    <h3>project 05</h3>
-                    <div style="display: flex;">
-                        <a href="#" class="button">Github</a>
-                        <a href="#" class="button">Live Demo</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="box">
-                <img src="" alt="">
-                <div class="content">
-                    <h3>project 06</h3>
-                    <div style="display: flex;">
-                        <a href="#" class="button">Github</a>
-                        <a href="#" class="button">Live Demo</a>
+                        <a href="https://github.com/VanshSrivastav21-VS/rentmybook" class="button">Github</a>
+                        <a href="https://youtu.be/5afjEytL5Kc?si=9thpAmmjfnJVB-Gn" class="button">Live Demo</a>
                     </div>
                 </div>
             </div>
         </div>
-     </section>
+    </section>
     <!-- Portfolio Section End -->
 
     <!-- Contact Section Start -->
-     <section class="contact" id="contact">
+    <section class="contact" id="contact">
 
         <h1 class="heading"> my <span>contact</span></h1>
 
@@ -238,7 +218,7 @@
             <textarea name="" id="" placeholder="your massage" class="box" cols="30" rows="10"></textarea>
             <input type="submit" value="send massage" class="btn">
         </form>
-     </section>
+    </section>
     <!-- Contact Section End -->
 
     <div class="creadits">created by <span>vansh srivastav</span> | all rights reserved</div>
