change css file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Custom css link -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -225,7 +225,7 @@
 
 
     <!-- Custom Js link -->
-    <script src="/js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
